--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,11 @@
 
 body {
   padding: 0;
+  background-color:#eeeeee;
+  color:#2e3c3f;
+  -webkit-font-smoothing: antialiased;
+  font-family: RobotoDraft,Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-weight: 500;
 }
 [ng-cloak]{
   display: none;
@@ -110,4 +115,510 @@ button{
   .jumbotron {
     border-bottom: 0;
   }
+}
+/*a.md-button.md-raised, .md-button.md-raised{
+  background-color: #C3E6EC;
+  color:#0095B4;
+}
+a.md-button.md-raised, .md-button.md-raised md-icon{
+  color:#0095B4;
+}*/
+/*解决动效图标不规则问题*/
+md-icon{
+  height:auto;
+}
+a{
+  text-decoration: none;
+}
+/*.md-button.md-raised:not([disabled]){
+  box-shadow: none;
+}*/
+/* Sanja */
+a.hq-button{
+  position: relative;
+  display: inline-block;
+  border: none;
+  background: none;
+  color: #286aab;
+  overflow: visible;
+  -webkit-transition: color 0.7s;
+  transition: color 0.7s;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+.hq-button::after{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    opacity: 0;
+}
+.hq-button:hover::after {
+  background: rgba(3,149,178,0.3);
+  color:#286aab;
+  -webkit-animation: anim-effect-sanja 2s ease-out forwards;
+  animation: anim-effect-sanja 2s ease-out forwards;
+}
+
+@-webkit-keyframes anim-effect-sanja {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale3d(0.5, 0.5, 1);
+    transform: scale3d(0.5, 0.5, 1);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes anim-effect-sanja {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale3d(0.5, 0.5, 1);
+    transform: scale3d(0.5, 0.5, 1);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.md-button.md-raised:not([disabled]){
+  box-shadow: none;
+}
+.md-whiteframe-z1 {
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.082);
+}
+.md-whiteframe-z2 {
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.14), 0 4px 5px 0 rgba(0, 0, 0, 0.098), 0 1px 10px 0 rgba(0, 0, 0, 0.082);
+}
+.md-whiteframe-z3 {
+    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.14), 0 6px 10px 0 rgba(0, 0, 0, 0.098), 0 1px 18px 0 rgba(0, 0, 0, 0.082);
+}
+.md-whiteframe-z4 {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.14), 0 8px 10px 1px rgba(0, 0, 0, 0.098), 0 3px 14px 2px rgba(0, 0, 0, 0.082);
+}
+.md-whiteframe-z5 {
+    box-shadow: 0 8px 10px -5px rgba(0, 0, 0, 0.14), 0 16px 24px 2px rgba(0, 0, 0, 0.098), 0 6px 30px 5px rgba(0, 0, 0, 0.082);
+}
+button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.14), 0 4px 5px 0 rgba(0, 0, 0, 0.098), 0 1px 10px 0 rgba(0, 0, 0, 0.082);
+}
+[flex]{
+    -webkit-transition: box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1) 0s, background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+    transition: box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1) 0s, background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;    
+}
+[flex]:hover{
+  box-shadow:0 0 20px 0 rgba(0,0,0,0.2),0 5px 5px 0 rgba(0,0,0,0.24)
+}
+/**
+ * navbar
+ */
+.navbar-header {
+    float: left;
+}
+.navbar.navbar, .navbar-default.navbar {
+    background-color: #009688;
+    color: rgba(255,255,255,.84);
+}
+.btn-group-vertical>.btn-group:after, .btn-group-vertical>.btn-group:before, .btn-toolbar:after, .btn-toolbar:before, .clearfix:after, .clearfix:before, .container-fluid:after, .container-fluid:before, .container:after, .container:before, .dl-horizontal dd:after, .dl-horizontal dd:before, .form-horizontal .form-group:after, .form-horizontal .form-group:before, .modal-footer:after, .modal-footer:before, .nav:after, .nav:before, .navbar-collapse:after, .navbar-collapse:before, .navbar-header:after, .navbar-header:before, .navbar:after, .navbar:before, .pager:after, .pager:before, .panel-body:after, .panel-body:before, .row:after, .row:before {
+    display: table;
+    content: " ";
+}
+.navbar-toggle {
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-top: 8px;
+    margin-right: 15px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+.navbar-brand {
+    float: left;
+    /*height: 50px;*/
+    padding: 15px 15px;
+    font-size: 18px;
+    line-height: 20px;
+}
+.navbar .navbar-brand {
+    position: relative;
+    /*height: 60px;*/
+    line-height: 30px;
+    color: inherit;
+}
+.navbar-default .navbar-brand {
+    color: #777;
+}
+
+
+.btn-group-vertical>.btn-group:after, .btn-toolbar:after, .clearfix:after, .container-fluid:after, .container:after, .dl-horizontal dd:after, .form-horizontal .form-group:after, .modal-footer:after, .nav:after, .navbar-collapse:after, .navbar-header:after, .navbar:after, .pager:after, .panel-body:after, .row:after {
+    clear: both;
+}
+.navbar-collapse {
+    padding-right: 15px;
+    padding-left: 15px;
+    overflow-x: visible;
+    -webkit-overflow-scrolling: touch;
+    border-top: 1px solid transparent;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
+}
+@media (min-width: 768px){
+.navbar-collapse.collapse {
+    display: block!important;
+    height: auto!important;
+    padding-bottom: 0;
+    overflow: visible!important;
+    visibility: visible!important;
+}
+}
+@media (min-width: 768px){
+.navbar-collapse {
+    width: auto;
+    border-top: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+}
+.nav {
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+@media (min-width: 768px){
+.navbar-nav>li {
+    float: left;
+}
+}
+.nav>li {
+    position: relative;
+    display: block;
+}
+.nav>li>a {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+}
+.nav>li>a:focus, .nav>li>a:hover {
+    text-decoration: none;
+}
+.navbar .navbar-nav>.active>a, .navbar .navbar-nav>.active>a:hover, .navbar .navbar-nav>.active>a:focus {
+    color: inherit;
+    background-color: rgba(255,255,255,.1);
+}
+.navbar .navbar-nav>li>a {
+    color: inherit;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.navbar-nav>li>.dropdown-menu {
+    margin-top: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 160px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    font-size: 14px;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+}
+.dropdown-menu {
+    border: 0;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+}
+.dropdown-menu li {
+    overflow: hidden;
+    position: relative;
+}
+.dropdown-menu>li>a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+}
+.dropdown-menu .divider {
+    height: 1px;
+    margin: 9px 0;
+    overflow: hidden;
+    background-color: #e5e5e5;
+}
+.dropdown-menu .divider {
+    background-color: rgba(229,229,229,.12);
+}
+
+.dropdown-header {
+    display: block;
+    padding: 3px 20px;
+    font-size: 12px;
+    line-height: 1.42857143;
+    color: #777;
+    white-space: nowrap;
+}
+
+.navbar-form {
+    padding: 10px 15px;
+    margin-top: 8px;
+    margin-right: -15px;
+    margin-bottom: 8px;
+    margin-left: -15px;
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 1px 0 rgba(255,255,255,.1);
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 1px 0 rgba(255,255,255,.1);
+}
+@media (min-width: 768px){
+.navbar-form {
+    width: auto;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-right: 0;
+    margin-left: 0;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+}
+@media (min-width: 768px){
+.navbar-left {
+    float: left!important;
+}
+}
+.navbar .navbar-form {
+    margin-top: 16px;
+}
+.navbar-nav {
+    margin: 7.5px -15px;
+}
+@media (min-width: 768px){
+.navbar-right {
+    float: right!important;
+    margin-right: -15px;
+}
+}
+@media (min-width: 768px){
+.navbar-nav {
+    float: left;
+    margin: 0;
+}
+}
+
+
+/**
+ * pagenation
+ */
+
+.pagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 20px 0;
+    border-radius: 4px;
+}
+
+.pagination>li {
+    display: inline;
+}
+.pagination>li>a, .pagination>li>span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #337ab7;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+.pagination>.disabled>a, .pagination>.disabled>a:focus, .pagination>.disabled>a:hover, .pagination>.disabled>span, .pagination>.disabled>span:focus, .pagination>.disabled>span:hover {
+    color: #777;
+    cursor: not-allowed;
+    background-color: #fff;
+    border-color: #ddd;
+}
+.pagination>li:first-child>a, .pagination>li:first-child>span {
+    margin-left: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
+    z-index: 2;
+    color: #fff;
+    cursor: default;
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
+
+
+/**
+ * breadcrumb
+ */
+.breadcrumb {
+    padding: 8px 15px;
+    margin-bottom: 20px;
+    list-style: none;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+}
+.breadcrumb>li {
+    display: inline-block;
+}
+.breadcrumb>.active {
+    color: #777;
+}
+.breadcrumb>li+li:before {
+    padding: 0 5px;
+    color: #ccc;
+    content: "/\00a0";
+}
+/**
+ * modal
+ */
+.modal {
+will-change: visibility, opacity;
+display: -webkit-box;
+display: -webkit-flex;
+display: -ms-flexbox;
+display: flex;
+-webkit-box-align: center;
+-webkit-align-items: center;
+    -ms-flex-align: center;
+        align-items: center;
+-webkit-box-pack: center;
+-webkit-justify-content: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+overflow-y: auto;
+overflow-x: hidden;
+z-index: 1000;
+visibility: hidden;
+opacity: 0;
+-webkit-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+        transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+-webkit-transition-delay: 0s;
+        transition-delay: 0s;
+}
+.modal--active {
+visibility: visible;
+opacity: 1;
+background-color: rgba(33,33,33,0.48)!important;
+}
+.modal--align-top {
+-webkit-box-align: start;
+-webkit-align-items: flex-start;
+    -ms-flex-align: start;
+        align-items: flex-start;
+}
+.modal__bg {
+background: transparent;
+}
+.modal__dialog {
+max-width: 600px;
+padding: 1.2rem;
+}
+.modal__content {
+will-change: transform, opacity;
+position: relative;
+padding: 2.4rem;
+background: #fff;
+background-clip: padding-box;
+box-shadow: 0 12px 15px 0 rgba(0,0,0,0.25);
+opacity: 0;
+-webkit-transition: all 0.25s cubic-bezier(0.23, 1, 0.32, 1);
+        transition: all 0.25s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.modal__content--active {
+opacity: 1;
+}
+.modal__close {
+    z-index: 1100;
+    cursor: pointer;
+    background-color: #ddd;
+    padding: 10px;
+    width: 20px;
+    border-radius: 20px;
+    height: 20px;
+    line-height: 8px;
+    text-align: center;
+    display: inline-block;
+    font-size: 20px;
+    position: absolute;
+    right: 3%;
+    top: 3%;
+}
+.modal__close i.fa{
+  pointer-events:none;
+}
+.modal__trigger {
+position: relative;
+display: inline-block;
+padding: 1.2rem 2.4rem;
+color: rgba(0,0,0,0.7);
+line-height: 1;
+cursor: pointer;
+background: #fff;
+box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
+-webkit-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+        transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.modal__trigger--active {
+z-index: 10;
+}
+.modal__trigger:hover {
+background: #e5d3d6;
+}
+#modal__temp {
+will-change: transform, opacity;
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background: #fff;
+-webkit-transform: none;
+    -ms-transform: none;
+        transform: none;
+opacity: 1;
+-webkit-transition: opacity 0.1s ease-out, -webkit-transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+        transition: opacity 0.1s ease-out, transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
