--- a/dest/styles/main.css
+++ b/dest/styles/main.css
@@ -7,6 +7,8 @@
 
 body {
   padding: 0;
+  /*background-color:#DFF3F6;*/
+  color:#2e3c3f;
 }
 [ng-cloak]{
   display: none;
@@ -109,5 +111,82 @@ button{
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
+  }
+}
+/*a.md-button.md-raised, .md-button.md-raised{
+  background-color: #C3E6EC;
+  color:#0095B4;
+}
+a.md-button.md-raised, .md-button.md-raised md-icon{
+  color:#0095B4;
+}*/
+/*解决动效图标不规则问题*/
+md-icon{
+  height:auto;
+}
+.md-button.md-raised:not([disabled]){
+  box-shadow: none;
+}
+/* Sanja */
+a.md-button{
+  position: relative;
+  display: inline-block;
+  border: none;
+  background: none;
+  color: #286aab;
+  overflow: visible;
+  -webkit-transition: color 0.7s;
+  transition: color 0.7s;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+.md-button::after{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    opacity: 0;
+}
+.md-button:hover::after {
+  background: rgba(3,149,178,0.3);
+  color:#286aab;
+  -webkit-animation: anim-effect-sanja 2s ease-out forwards;
+  animation: anim-effect-sanja 2s ease-out forwards;
+}
+
+@-webkit-keyframes anim-effect-sanja {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale3d(0.5, 0.5, 1);
+    transform: scale3d(0.5, 0.5, 1);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes anim-effect-sanja {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale3d(0.5, 0.5, 1);
+    transform: scale3d(0.5, 0.5, 1);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
 }
