--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,15 +6,28 @@
 }
 
 body {
-  padding: 0;
+ /* padding: 0;
+  height: auto;
   background-color:#eeeeee;
   color:#2e3c3f;
   -webkit-font-smoothing: antialiased;
   font-family: RobotoDraft,Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
-  font-weight: 500;
+  font-weight: 500;*/
+  padding: 0;
+    height: auto;
+    background-color: #EEEEEE;
+    color: #7A8491;
+    -webkit-font-smoothing: antialiased;
+    font-family: 'sans-serif',arial;
+    font-weight: 900;
 }
 [ng-cloak]{
   display: none;
+}
+a:focus,input,textarea,button,md-button,md-table:focus {
+     outline:none;
+     -moz-outline:none;
+     outline: 0;
 }
 button{
   -moz-user-select: none;
@@ -30,9 +43,9 @@ button{
     font-style: inherit;
     font-variant: inherit;
     font-weight: 500;
-    line-height: 36px;
-    margin: 6px 8px;
-    min-height: 36px;
+    line-height: 32px;
+    min-height: 30px;
+    margin: 2px 2px;
     min-width: 88px;
     outline: 0 none;
     overflow: hidden;
@@ -44,6 +57,32 @@ button{
     transition: box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1) 0s, background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
     white-space: nowrap;
 }
+.md-button{
+  margin:2px;
+  min-height: 30px!important;
+  line-height:32px;
+}
+.md-button.md-icon-button{
+  width:30px!important;
+  height:30px!important;
+  line-height: 30px;
+}
+md-menu-content{
+  padding: 0;
+}
+md-menu-item>.md-button{
+  height:30px;
+  margin:0;
+  padding: 0;
+}
+md-menu-item{
+  height: 30px;
+  min-height: 30px;
+}
+.md-open-menu-container.md-active{
+    margin-top: 38px;
+    margin-left: -65px;
+}
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -52,10 +91,45 @@ button{
   padding-right: 15px;
 }
 
+.main{
+  z-index:45;
+  position: relative;
+}
 /* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
+.sidebar-head{
+  position: fixed;
+  top:0;
+  width:180px;
+  left:0;
   margin-bottom: 10px;
+  z-index: 50;
+}
+.minside .sidebar-head{
+  width:50px;
+}
+.navbar-logo{
+  height: 50px;
+  text-align: center;
+  background-color: #0094B2;
+  line-height: 50px;
+  font-size: 24px;
+  color:#fff;
+}
+.header {
+  position: fixed;
+  top:0;
+  left: 180px;
+  right: 0;
+  /*border-bottom: 1px solid #e5e5e5;*/
+  margin-bottom: 10px;
+  z-index:50;
+}
+.minside .header{
+  left:50px;
+}
+.header-relative{
+  position: relative;
+  height:50px;
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
@@ -63,6 +137,88 @@ button{
   margin-bottom: 0;
   line-height: 40px;
   padding-bottom: 19px;
+}
+#sidebar{
+  width:180px;
+  position: fixed;
+  top:0px;
+  left:0;
+  bottom:0;
+  background-color: #0094B2;
+  /*height: calc(100% - 50px);*/
+ /* -webkit-transform: translate3d(-180px,0,0);
+  transform: translate3d(-180px,0,0);*/
+  -webkit-transition: all;
+  -o-transition: all;
+  transition: all;
+  -webkit-transition-duration: 300ms;
+  transition-duration: 300ms;
+}
+.minside #sidebar{
+  width:50px;
+}
+.sidebar-set{
+  height: 30px;
+  width: 100%;
+  color: #aeb9c2;
+  text-align: center;
+  line-height: 30px !important;
+  font-size: 12px;
+  user-select: none;
+  cursor: pointer;
+  -webkit-user-select: none;
+}
+.sidebar-ul{
+  width:100%;
+}
+.sidebar-ul>ul{
+  list-style: none;
+  margin: 0;
+  padding: 0 15px;
+}
+.sidebar-ul>ul>li{
+  height:40px;
+  position: relative;
+  color:rgba(255,255,255,0.8);
+  margin: 2px 0;
+}
+.sidebar-ul>ul>li.active{
+  /*background-color: #00677C;*/
+  background-color: rgba(0,103,124,0.5);
+  color:#B3D2D8;
+}
+.sidebar-ul>ul>li>.icon{
+  height:40px;
+  width:50px;
+  position: relative;
+  line-height: 40px;
+  text-align: center;
+}  
+.sidebar-ul>ul>li>.text{
+  position: absolute;
+  height:100%;
+  width:calc(100% - 50px);
+  right:0;
+  top:0;
+  line-height: 40px;
+  overflow: hidden;
+}
+.minside .sidebar-ul>ul{
+  padding-left:0;
+  padding-right:0;
+}
+.minside .sidebar-ul>ul>li>.text{
+  width:0;
+}
+#content{
+  padding:0 0 30px 180px;
+}
+.minside #content{
+  padding:0 0 30px 50px;
+}
+.inner_content{
+  padding:15px;
+  margin:0 auto;
 }
 
 /* Custom page footer */
@@ -116,11 +272,11 @@ button{
     border-bottom: 0;
   }
 }
-/*a.md-button.md-raised, .md-button.md-raised{
-  background-color: #C3E6EC;
-  color:#0095B4;
+a.md-button.md-raised, .md-button.md-raised{
+  color: #7A8491;
+  background-color: #eee;
 }
-a.md-button.md-raised, .md-button.md-raised md-icon{
+/*a.md-button.md-raised, .md-button.md-raised md-icon{
   color:#0095B4;
 }*/
 /*解决动效图标不规则问题*/
@@ -215,15 +371,25 @@ a.hq-button{
 .md-whiteframe-z5 {
     box-shadow: 0 8px 10px -5px rgba(0, 0, 0, 0.14), 0 16px 24px 2px rgba(0, 0, 0, 0.098), 0 6px 30px 5px rgba(0, 0, 0, 0.082);
 }
-button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
+button:hover,a.md-button:hover,.md-button.md-raised:not([disabled]):hover{
     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.14), 0 4px 5px 0 rgba(0, 0, 0, 0.098), 0 1px 10px 0 rgba(0, 0, 0, 0.082);
 }
+[layout=row]{
+  background-color: #fff;
+}
+[layout=row][layout-margin]{
+  margin: 16px 8px;
+}
 [flex]{
+    outline: none;
     -webkit-transition: box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1) 0s, background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
     transition: box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1) 0s, background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;    
 }
-[flex]:hover{
+[flex]:hover,.shadow-hover:hover{
   box-shadow:0 0 20px 0 rgba(0,0,0,0.2),0 5px 5px 0 rgba(0,0,0,0.24)
+}
+.noshadow:hover{
+  box-shadow: none;
 }
 /**
  * navbar
@@ -232,8 +398,19 @@ button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
     float: left;
 }
 .navbar.navbar, .navbar-default.navbar {
-    background-color: #009688;
-    color: rgba(255,255,255,.84);
+    background-color: #fff;
+    color: #0094B2;
+}
+.navbar-default:after {
+    position: absolute;
+    width: 100%;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    background-image: url('../images/bottom.png');
+    background-repeat: repeat-x;
+    background-size: 1px 12px;
+    height: 12px;
 }
 .btn-group-vertical>.btn-group:after, .btn-group-vertical>.btn-group:before, .btn-toolbar:after, .btn-toolbar:before, .clearfix:after, .clearfix:before, .container-fluid:after, .container-fluid:before, .container:after, .container:before, .dl-horizontal dd:after, .dl-horizontal dd:before, .form-horizontal .form-group:after, .form-horizontal .form-group:before, .modal-footer:after, .modal-footer:before, .nav:after, .nav:before, .navbar-collapse:after, .navbar-collapse:before, .navbar-header:after, .navbar-header:before, .navbar:after, .navbar:before, .pager:after, .pager:before, .panel-body:after, .panel-body:before, .row:after, .row:before {
     display: table;
@@ -254,7 +431,7 @@ button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
 .navbar-brand {
     float: left;
     /*height: 50px;*/
-    padding: 15px 15px;
+    padding: 10px 15px;
     font-size: 18px;
     line-height: 20px;
 }
@@ -264,11 +441,6 @@ button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
     line-height: 30px;
     color: inherit;
 }
-.navbar-default .navbar-brand {
-    color: #777;
-}
-
-
 .btn-group-vertical>.btn-group:after, .btn-toolbar:after, .clearfix:after, .container-fluid:after, .container:after, .dl-horizontal dd:after, .form-horizontal .form-group:after, .modal-footer:after, .nav:after, .navbar-collapse:after, .navbar-header:after, .navbar:after, .pager:after, .panel-body:after, .row:after {
     clear: both;
 }
@@ -318,7 +490,8 @@ button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
     padding: 10px 15px;
 }
 .nav>li>a:focus, .nav>li>a:hover {
-    text-decoration: none;
+    /*text-decoration: none;*/
+    box-shadow: none;
 }
 .navbar .navbar-nav>.active>a, .navbar .navbar-nav>.active>a:hover, .navbar .navbar-nav>.active>a:focus {
     color: inherit;
@@ -326,8 +499,8 @@ button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
 }
 .navbar .navbar-nav>li>a {
     color: inherit;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 .navbar-nav>li>.dropdown-menu {
     margin-top: 0;
@@ -447,7 +620,7 @@ button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
 .pagination {
     display: inline-block;
     padding-left: 0;
-    margin: 20px 0;
+    margin: 2px 0;
     border-radius: 4px;
 }
 
@@ -460,10 +633,11 @@ button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
     padding: 6px 12px;
     margin-left: -1px;
     line-height: 1.42857143;
-    color: #337ab7;
+    /*color: #337ab7;*/
     text-decoration: none;
     background-color: #fff;
-    border: 1px solid #ddd;
+    min-width:0px;
+    /*border: 1px solid #ddd;*/
 }
 .pagination>.disabled>a, .pagination>.disabled>a:focus, .pagination>.disabled>a:hover, .pagination>.disabled>span, .pagination>.disabled>span:focus, .pagination>.disabled>span:hover {
     color: #777;
@@ -480,8 +654,8 @@ button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
     z-index: 2;
     color: #fff;
     cursor: default;
-    background-color: #337ab7;
-    border-color: #337ab7;
+    /*background-color: #337ab7;*/
+    /*border-color: #337ab7;*/
 }
 
 
@@ -489,21 +663,23 @@ button:hover,a:hover,.md-button.md-raised:not([disabled]):hover{
  * breadcrumb
  */
 .breadcrumb {
-    padding: 8px 15px;
-    margin-bottom: 20px;
-    list-style: none;
-    background-color: #f5f5f5;
-    border-radius: 4px;
+    padding: 6px 15px;
+    border-radius: 4px; 
+    float: left;
+    margin: 0;
 }
-.breadcrumb>li {
-    display: inline-block;
+.breadcrumb>li{
+  display: inline-block;
 }
-.breadcrumb>.active {
-    color: #777;
+.breadcrumb>li a{
+    color:#0094B2;
+}
+.breadcrumb>.active{
+    color: #7A8491;
 }
 .breadcrumb>li+li:before {
     padding: 0 5px;
-    color: #ccc;
+    color: #7A8491;
     content: "/\00a0";
 }
 /**
@@ -621,4 +797,121 @@ background: #fff;
 opacity: 1;
 -webkit-transition: opacity 0.1s ease-out, -webkit-transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
         transition: opacity 0.1s ease-out, transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+
+
+/* angular material table*/
+.main-fab {
+  position:absolute;
+  z-index:20;
+  font-size:30px;
+  top:100px;
+  left:24px;
+  transform:scale(.88,.88);
+}
+
+.md-breadcrumb {
+  padding-left:88px;  
+}
+
+.JCLRgrip:first-child {
+  left:105px!important;
+  display: none!important;
+}
+
+.JColResizer th:first-child {
+  width: 105px!important;
+}
+
+.md-table {
+  min-width: 100%;
+  border-collapse: collapse;
+}
+
+.md-table tbody tr:hover, .md-table tbody tr:focus {
+  cursor:pointer;
+  background-color:#EEEEEE;
+}
+
+.md-table-header {
+  border-bottom: 1px solid rgb(230,230,230);
+  color: rgb(130,130,130);
+  text-align: left;
+  font-size: 0.75em;
+  font-weight: 700;
+  padding: 16px 16px 16px 0;
+}
+
+.md-table-header a{
+  text-decoration: none;
+  color: inherit;
+}
+
+.md-table-content {
+  white-space: nowrap;
+  font-size: 0.8em;
+  padding: 16px 16px 16px 0;
+  /*height: 72px;*/
+}
+
+.md-table-td-more {
+  max-width:72px;
+  width:72px;
+  /*padding:16px;*/
+}
+
+.md-table-thumbs {
+  max-width: 104px;
+  width: 104px;
+  padding: 0px 32px;
+}
+
+.md-table-thumbs div {
+  overflow:hidden;
+  width: 40px;
+  height:40px;
+  border-radius:20px;
+  border: 1px solid rgba(0,0,0,0.2);
+  background-size:cover;
+  box-shadow: 0 8px 10px rgba(0,0,0,.3);
+  -webkit-box-shadow: 0 8px 10px rgba(0,0,0,.1);
+}
+
+.md-table-footer {
+  height:40px;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.md-table-count-info {
+  line-height:40px;
+  font-size:.75em;
+}
+.md-table-count-info>a{
+  color:#63295C;
+}
+
+.md-table-footer-item {
+  width: 40px;
+  height: 40px;
+  vertical-align:middle;
+}
+
+.md-table-active-page {
+  font-weight: 700;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.grey {
+  color: grey;
+}
+
+md-input-container.md-default-theme .md-input {
+  color: white;
+  border-color: white;
+  margin-top: 24px;
 }
